--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "stylelint": "^13.8.0",
+    "stylelint-prettier": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +50,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "pre-commit": "^1.2.2",
+    "prettier": "^2.2.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-order": "^4.1.0"
   }
 }
